# python-farming

./: .editorconfig  .gitignore  .prettierignore  .stage26-validation-passed  README.md  index.html  package-lock.json  package.json  stage25-test-diagnostic.txt  stage26-diagnostic.txt  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  hotfix-oop-loader-patch.yml  one-time-stage20-inheritance-patch.yml  stage21-pr-patch.yml  stage21-testing-ui-patch.yml  stage24-patch.yml  stage25-diagnostic.yml  stage25-patch.yml  stage25-runtime-fix.yml  stage25-test-diagnostic.yml  stage26-apply.yml  stage26-curriculum-fix.yml  stage26-diagnostic.yml  stage26-patch.yml  stage26-validation.yml  stage27-patch.yml  utf8-runtime-hotfix.yml
docs/architecture/: python-runtime.md  system-overview.md
docs/product/: vision.md
docs/stages/: stage-01-foundation.md
public/content/: curriculum.json  module-packages.json
scripts/: stage21_patch.py  stage24_patch.py  stage25_patch.py  stage25_runtime_fix.py  stage26_apply.py  stage26_curriculum_fix.py  stage26_patch.py  stage27_patch.py
scripts/stage26/: content_test.b64  integration_test.b64  module.b64  validator.b64
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  updater.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  progress.rs  project_runtime.rs  runtime.rs
src/app/: App.tsx  AppRouter.tsx  appConfig.ts  routes.ts
src/editor/: CodeEditor.tsx  EditorWorkspaceLayout.css  ProjectTree.module.css  ProjectTree.tsx  editorCommands.ts  (+4 more)
(+149 files in other folders)
